cmake_minimum_required(VERSION 4.0)
project(02_c_mastery C)

set(CMAKE_C_STANDARD 11)

# dir00_main

# ch03_formatted_input_and_output
add_executable(01_add_frac "ch03_formatted_input_and_output/01_add_frac_edit.c")
add_executable(02_add_frac "ch03_formatted_input_and_output/02_adding_fractions.c")
add_executable(03_checkmark "ch03_formatted_input_and_output/03_checkmark.c")
add_executable(04_date_reorder "ch03_formatted_input_and_output/04_date_reorder.c")
add_executable(05_dollar_bills "ch03_formatted_input_and_output/05_dollar_bills.c")
add_executable(06_d_weight "ch03_formatted_input_and_output/06_d_weight.c")
add_executable(07_exercise "ch03_formatted_input_and_output/07_exercise.c")
add_executable(08_hello "ch03_formatted_input_and_output/08_hello.c")
add_executable(09_isbn_sorting "ch03_formatted_input_and_output/09_isbn_sorting.c")
add_executable(10_loan "ch03_formatted_input_and_output/10_loan.c")
add_executable(11_magic_square "ch03_formatted_input_and_output/11_magic_square.c")
add_executable(12_main "ch03_formatted_input_and_output/12_main.c")
add_executable(13_operator_precd "ch03_formatted_input_and_output/13_operator_precd.c")
add_executable(14_phone_num_sorting "ch03_formatted_input_and_output/14_phone_num_sorting.c")
add_executable(15_polynomial "ch03_formatted_input_and_output/15_polynomial.c")
add_executable(16_product_info "ch03_formatted_input_and_output/16_product_info.c")
add_executable(17_scanf "ch03_formatted_input_and_output/17_scanf.c")
add_executable(18_tprintf "ch03_formatted_input_and_output/18_tprintf.c")
add_executable(19_vat "ch03_formatted_input_and_output/19_vat.c")
add_executable(20_volume_sphere "ch03_formatted_input_and_output/20_volume_sphere.c")

# ch04_expressions
add_executable(01_area_code "ch04_expressions/01_area_code.c")
add_executable(02_broker_commissions "ch04_expressions/02_broker_commission.c")
add_executable(03_date_sorting "ch04_expressions/03_date_sorting.c")
add_executable(04_digit_to_word "ch04_expressions/04_digit_to_word.c")
add_executable(05_digit_counter "ch04_expressions/05_digit_counter.c")
add_executable(06_flight_arrival "ch04_expressions/06_flight_arrival.c")
add_executable(07_grade_switch "ch04_expressions/07_grade_switch.c")
add_executable(08_largest_smallest "ch04_expressions/08_largest_smallest.c")
add_executable(09_legal_date "ch04_expressions/09_legal_date.c")
add_executable(10_switch_statement "ch04_expressions/10_switch_statement.c")
add_executable(11_tax "ch04_expressions/11_tax.c")
add_executable(12_time_convert "ch04_expressions/12_time_convert.c")
add_executable(13_upc "ch04_expressions/13_upc.c")
add_executable(14_wind_speed "ch04_expressions/14_wind_speed.c")

# ch06_loops
add_executable(01_checking "ch06_loops/01_checking.c")
add_executable(02_date_sort_testing "ch06_loops/02_date_sort_testing_clion.c")
add_executable(03_num_digits "ch06_loops/03_num_digits.c")
add_executable(04_prime "ch06_loops/04_prime.c")
add_executable(05_square "ch06_loops/05_square.c")
add_executable(06_square1 "ch06_loops/06_square1.c")
add_executable(07_square3 "ch06_loops/07_square3.c")
add_executable(08_sum "ch06_loops/08_sum.c")

# ch07_basic_types
add_executable(01_alpha_to_num "ch07_basic_types/01_alpha_to_num.c")
add_executable(02_average_word_count "ch07_basic_types/02_average_word_count.c")
add_executable(03_factorial.c "ch07_basic_types/03_factorial.c")
add_executable(04_flight_arrival "ch07_basic_types/04_flight_arrival.c")
add_executable(05_holding "ch07_basic_types/05_holding.c")
add_executable(06_main "ch07_basic_types/06_main.c")
add_executable(07_operations_on_fractions "ch07_basic_types/08_operations_on_fractions.c")
add_executable(08_scrabble "ch07_basic_types/09_scrabble.c")
add_executable(09_size_of "ch07_basic_types/10_size_of.c")
add_executable(10_square2 "ch07_basic_types/11_square2.c")
add_executable(11_square2_edit "ch07_basic_types/12_square2_edit.c")
add_executable(12_square_root "ch07_basic_types/13_square_root.c")
add_executable(13_sum2 "ch07_basic_types/14_sum2.c")
add_executable(14_time_format_convert "ch07_basic_types/15_time_format_convert.c")
add_executable(15_vowel_count "ch07_basic_types/16_vowel_count.c")
add_executable(16_name "ch07_basic_types/07_name.c")

# ch08_arrays
add_executable(01_arrays "ch08_arrays/01_arrays.c")
add_executable(02_grades "ch08_arrays/02_grades.c")
add_executable(03_biff_filter "ch08_arrays/03_biff_filter.c")
add_executable(04_biff_filter_temp "ch08_arrays/04_biff_filter(temp).c")
add_executable(05_const_int_segments "ch08_arrays/05_const_int_segments.c")
add_executable(06_deal "ch08_arrays/06_deal.c")
add_executable(07_fib_numbers "ch08_arrays/07_fib_numbers.c")
add_executable(08_identity_matrix "ch08_arrays/08_identity_matrix.c")
add_executable(09_interest "ch08_arrays/09_interest.c")
add_executable(10_main "ch08_arrays/10_interest_months.c")
add_executable(11_main "ch08_arrays/11_main.c")
add_executable(12_rand_number "ch08_arrays/12_rand_number.c")
add_executable(13_rep_digit "ch08_arrays/13_rep_digit.c")
add_executable(14_repeated_digit "ch08_arrays/14_repeated_digit.c")
add_executable(15_rep_digit_2 "ch08_arrays/15_repeated_digit_2.c")
add_executable(16_rep_digit_3 "ch08_arrays/16_repeated_digit_3.c")
add_executable(17_reverse "ch08_arrays/17_reverse.c")
add_executable(18_reverse_numbers "ch08_arrays/18_reverse_numbers.c")
add_executable(19_temp "ch08_arrays/19_temp.c")

# ch09_functions
add_executable(01_main "ch09_functions/01_main.c")
add_executable(02_average "ch09_functions/02_average.c")
add_executable(03_prime "ch09_functions/03_prime.c")
add_executable(04_partitioning "ch09_functions/04_partitioning.c")
add_executable(05_indirect_recursion "ch09_functions/05_indirect_recursion.c")
add_executable(06_quick_sort "ch09_functions/06_quick_sort.c")
add_executable(00_temp ch09_functions/00_temp.c)
#exercises
add_executable(ex02_gcd "ch09_functions/exercises/ex02_gcd.c")
add_executable(ex04_day_num "ch09_functions/exercises/ex04_day_num.c")
add_executable(ex05_num_digits "ch09_functions/exercises/ex05_num_digits.c")
add_executable(ex06_digit_pos "ch09_functions/exercises/ex06_digit_pos.c")
add_executable(ex10 "ch09_functions/exercises/ex10.c")
add_executable(ex11_compute_gpa "ch09_functions/exercises/ex11_compute_gpa.c")
add_executable(ex14_has_zero_fn "ch09_functions/exercises/ex14_has_zero_fn.c")
add_executable(ex15_median_fn "ch09_functions/exercises/ex15_median_fn.c")
add_executable(ex17_fn_fact "ch09_functions/exercises/ex17_fn_fact_non_recursive.c")
add_executable(ex18_gcd_recursive "ch09_functions/exercises/ex18_gcd_recursive.c")