cmake_minimum_required(VERSION 3.31.6)
project(02_c_mastery C)

set(CMAKE_C_STANDARD 11)

# dir00_main

# ch03_formatted_input_and_output
ADD_EXECUTABLE(cp3_01_add_frac "ch03_formatted_input_and_output/01_add_frac_edit.c")
ADD_EXECUTABLE(cp3_02_add_frac "ch03_formatted_input_and_output/02_adding_fractions.c")
ADD_EXECUTABLE(cp3_03_checkmark "ch03_formatted_input_and_output/03_checkmark.c")
ADD_EXECUTABLE(cp3_04_date_reorder "ch03_formatted_input_and_output/04_date_reorder.c")
ADD_EXECUTABLE(cp3_05_dollar_bills "ch03_formatted_input_and_output/05_dollar_bills.c")
ADD_EXECUTABLE(cp3_06_d_weight "ch03_formatted_input_and_output/06_d_weight.c")
ADD_EXECUTABLE(cp3_07_exercise "ch03_formatted_input_and_output/07_exercise.c")
ADD_EXECUTABLE(cp3_08_hello "ch03_formatted_input_and_output/08_hello.c")
ADD_EXECUTABLE(cp3_09_isbn_sorting "ch03_formatted_input_and_output/09_isbn_sorting.c")
ADD_EXECUTABLE(cp3_10_loan "ch03_formatted_input_and_output/10_loan.c")
ADD_EXECUTABLE(cp3_11_magic_square "ch03_formatted_input_and_output/11_magic_square.c")
ADD_EXECUTABLE(cp3_12_main "ch03_formatted_input_and_output/12_main.c")
ADD_EXECUTABLE(cp3_13_operator_precd "ch03_formatted_input_and_output/13_operator_precd.c")
ADD_EXECUTABLE(cp3_14_phone_num_sorting "ch03_formatted_input_and_output/14_phone_num_sorting.c")
ADD_EXECUTABLE(cp3_15_polynomial "ch03_formatted_input_and_output/15_polynomial.c")
ADD_EXECUTABLE(cp3_16_product_info "ch03_formatted_input_and_output/16_product_info.c")
ADD_EXECUTABLE(cp3_17_scanf "ch03_formatted_input_and_output/17_scanf.c")
ADD_EXECUTABLE(cp3_18_tprintf "ch03_formatted_input_and_output/18_tprintf.c")
ADD_EXECUTABLE(cp3_19_vat "ch03_formatted_input_and_output/19_vat.c")
ADD_EXECUTABLE(cp3_20_volume_sphere "ch03_formatted_input_and_output/20_volume_sphere.c")

# ch04_expressions
ADD_EXECUTABLE(cp4_01_area_code "ch04_expressions/01_area_code.c")
ADD_EXECUTABLE(cp4_02_broker_commissions "ch04_expressions/02_broker_commission.c")
ADD_EXECUTABLE(cp4_03_date_sorting "ch04_expressions/03_date_sorting.c")
ADD_EXECUTABLE(cp4_04_digit_to_word "ch04_expressions/04_digit_to_word.c")
ADD_EXECUTABLE(cp4_05_digit_counter "ch04_expressions/05_digit_counter.c")
ADD_EXECUTABLE(cp4_06_flight_arrival "ch04_expressions/06_flight_arrival.c")
ADD_EXECUTABLE(cp4_07_grade_switch "ch04_expressions/07_grade_switch.c")
ADD_EXECUTABLE(cp4_08_largest_smallest "ch04_expressions/08_largest_smallest.c")
ADD_EXECUTABLE(cp4_09_legal_date "ch04_expressions/09_legal_date.c")
ADD_EXECUTABLE(cp4_10_switch_statement "ch04_expressions/10_switch_statement.c")
ADD_EXECUTABLE(cp4_11_tax "ch04_expressions/11_tax.c")
ADD_EXECUTABLE(cp4_12_time_convert "ch04_expressions/12_time_convert.c")
ADD_EXECUTABLE(cp4_13_upc "ch04_expressions/13_upc.c")
ADD_EXECUTABLE(cp4_14_wind_speed "ch04_expressions/14_wind_speed.c")

# ch06_loops
ADD_EXECUTABLE(cp6_01_checking "ch06_loops/01_checking.c")
ADD_EXECUTABLE(cp6_02_date_sort_testing "ch06_loops/02_date_sort_testing_clion.c")
ADD_EXECUTABLE(cp6_03_num_digits "ch06_loops/03_num_digits.c")
ADD_EXECUTABLE(cp6_04_prime "ch06_loops/04_prime.c")
ADD_EXECUTABLE(cp6_05_square "ch06_loops/05_square.c")
ADD_EXECUTABLE(cp6_06_square1 "ch06_loops/06_square1.c")
ADD_EXECUTABLE(cp6_07_square3 "ch06_loops/07_square3.c")
ADD_EXECUTABLE(cp6_08_sum "ch06_loops/08_sum.c")

# ch07_basic_types
ADD_EXECUTABLE(cp7_01_alpha_to_num "ch07_basic_types/01_alpha_to_num.c")
ADD_EXECUTABLE(cp7_02_average_word_count "ch07_basic_types/02_average_word_count.c")
ADD_EXECUTABLE(cp7_03_factorial.c "ch07_basic_types/03_factorial.c")
ADD_EXECUTABLE(cp7_04_flight_arrival "ch07_basic_types/04_flight_arrival.c")
ADD_EXECUTABLE(cp7_05_holding "ch07_basic_types/05_holding.c")
ADD_EXECUTABLE(cp7_06_main "ch07_basic_types/06_main.c")
ADD_EXECUTABLE(cp7_07_operations_on_fractions "ch07_basic_types/08_operations_on_fractions.c")
ADD_EXECUTABLE(cp7_08_scrabble "ch07_basic_types/09_scrabble.c")
ADD_EXECUTABLE(cp7_09_size_of "ch07_basic_types/10_size_of.c")
ADD_EXECUTABLE(cp7_10_square2 "ch07_basic_types/11_square2.c")
ADD_EXECUTABLE(cp7_11_square2_edit "ch07_basic_types/12_square2_edit.c")
ADD_EXECUTABLE(cp7_12_square_root "ch07_basic_types/13_square_root.c")
ADD_EXECUTABLE(cp7_13_sum2 "ch07_basic_types/14_sum2.c")
ADD_EXECUTABLE(cp7_14_time_format_convert "ch07_basic_types/15_time_format_convert.c")
ADD_EXECUTABLE(cp7_15_vowel_count "ch07_basic_types/16_vowel_count.c")
ADD_EXECUTABLE(cp7_16_name "ch07_basic_types/07_name.c")

# ch08_arrays
ADD_EXECUTABLE(cp8_01_arrays "ch08_arrays/01_arrays.c")
ADD_EXECUTABLE(cp8_02_grades "ch08_arrays/02_grades.c")
ADD_EXECUTABLE(cp8_03_biff_filter "ch08_arrays/03_biff_filter.c")
ADD_EXECUTABLE(cp8_04_biff_filter_temp "ch08_arrays/04_biff_filter(temp).c")
ADD_EXECUTABLE(cp8_05_const_int_segments "ch08_arrays/05_const_int_segments.c")
ADD_EXECUTABLE(cp8_06_deal "ch08_arrays/06_deal.c")
ADD_EXECUTABLE(cp8_07_fib_numbers "ch08_arrays/07_fib_numbers.c")
ADD_EXECUTABLE(cp8_08_identity_matrix "ch08_arrays/08_identity_matrix.c")
ADD_EXECUTABLE(cp8_09_interest "ch08_arrays/09_interest.c")
ADD_EXECUTABLE(cp8_10_main "ch08_arrays/10_interest_months.c")
ADD_EXECUTABLE(cp8_11_main "ch08_arrays/11_main.c")
ADD_EXECUTABLE(cp8_12_rand_number "ch08_arrays/12_rand_number.c")
ADD_EXECUTABLE(cp8_13_rep_digit "ch08_arrays/13_rep_digit.c")
ADD_EXECUTABLE(cp8_14_repeated_digit "ch08_arrays/14_repeated_digit.c")
ADD_EXECUTABLE(cp8_15_rep_digit_2 "ch08_arrays/15_repeated_digit_2.c")
ADD_EXECUTABLE(cp8_16_rep_digit_3 "ch08_arrays/16_repeated_digit_3.c")
ADD_EXECUTABLE(cp8_17_reverse "ch08_arrays/17_reverse.c")
ADD_EXECUTABLE(cp8_18_reverse_numbers "ch08_arrays/18_reverse_numbers.c")
ADD_EXECUTABLE(cp8_19_temp "ch08_arrays/19_temp.c")

# ch09_functions
ADD_EXECUTABLE(cp9_01_main "ch09_functions/01_main.c")
ADD_EXECUTABLE(cp9_02_average "ch09_functions/02_average.c")
ADD_EXECUTABLE(cp9_03_prime "ch09_functions/03_prime.c")
ADD_EXECUTABLE(cp9_04_partitioning "ch09_functions/04_partitioning.c")
ADD_EXECUTABLE(cp9_05_indirect_recursion "ch09_functions/05_indirect_recursion.c")
ADD_EXECUTABLE(cp9_06_quick_sort "ch09_functions/06_quick_sort.c")
ADD_EXECUTABLE(cp9_00_temp ch09_functions/00_temp.c)
#exercises
ADD_EXECUTABLE(cp9_ex02_gcd "ch09_functions/exercises/ex02_gcd.c")
ADD_EXECUTABLE(cp9_ex04_day_num "ch09_functions/exercises/ex04_day_num.c")
ADD_EXECUTABLE(cp9_ex05_num_digits "ch09_functions/exercises/ex05_num_digits.c")
ADD_EXECUTABLE(cp9_ex06_digit_pos "ch09_functions/exercises/ex06_digit_pos.c")
ADD_EXECUTABLE(cp9_ex10 "ch09_functions/exercises/ex10.c")
ADD_EXECUTABLE(cp9_ex11_compute_gpa "ch09_functions/exercises/ex11_compute_gpa.c")
ADD_EXECUTABLE(cp9_ex14_has_zero_fn "ch09_functions/exercises/ex14_has_zero_fn.c")
ADD_EXECUTABLE(cp9_ex15_median_fn "ch09_functions/exercises/ex15_median_fn.c")
ADD_EXECUTABLE(cp9_ex17_fn_fact "ch09_functions/exercises/ex17_fn_fact_non_recursive.c")
ADD_EXECUTABLE(cp9_ex18_gcd_recursive "ch09_functions/exercises/ex18_gcd_recursive.c")
ADD_EXECUTABLE(cp9_ex19_mystery_fn "ch09_functions/exercises/ex19_mystery_fn.c")
#projects
add_executable(cp9_pr01_selection_sort "ch09_functions/projects/cp9_pr01_selection_sort.c")