cmake_minimum_required(VERSION 3.31)
project(loops C)

set(CMAKE_C_STANDARD 11)

add_executable(square square.c)
add_executable(sum sum.c)
add_executable(num-digits num-digits.c)
add_executable(square1 square1.c)
add_executable(square3 square3.c)
add_executable(checking checking.c)
add_executable(prime prime.c)

add_executable(date_sort_testing_clion date_sort_testing_clion.c)
