cmake_minimum_required(VERSION 3.31)
project(basic_types C)

set(CMAKE_C_STANDARD 17)

add_executable(basic_types main.c)
add_executable(square2 square2.c)
add_executable(square2_edit square2_edit.c)
add_executable(sum2 sum2.c)
add_executable(alpha_to_num alpha_to_num.c)
add_executable(scrabble scrabble.c)
add_executable(size_of size_of.c)
add_executable(fraction_ops operations_on_fractions.c)
add_executable(flight_arrival flight_arrival.c)
add_executable(temp holding.c)
add_executable(time_convert time_format_convert.c)
add_executable(vowel_count vowel_count.c)
add_executable(name name.c)
add_executable(avg_word_count average_word_count.c)
add_executable(square_root square_root.c)
add_executable(factorial factorial.c)
