cmake_minimum_required(VERSION 4.0)
project(functions C)

set(CMAKE_C_STANDARD 11)

add_executable(01_main 01_main.c)
add_executable(02_average 02_average.c)
add_executable(03_prime 03_prime.c)
add_executable(04_partitioning 04_partitioning.c)
add_executable(05_part_yt 05_partitioning_yt.c)
add_executable(06_quick_sort 06_quick_sort.c)
