cmake_minimum_required(VERSION 3.31)
project(block1 C)

set(CMAKE_C_STANDARD 11)

add_executable(block1 main.c)
add_executable(add-frac-edit add_frac_edit.c)
add_executable(add-frac adding_fractions.c)
add_executable(date-reorder date_reorder.c)
add_executable(dollarbills dollarbills.c)
add_executable(dweight dweight.c)
add_executable(exercise exercise.c)
add_executable(hello hello.c)
add_executable(isbn isbn_sorting.c)
add_executable(loan loan.c)
add_executable(operators operator_precd.c)
add_executable(phone-num phonenum_sorting.c)
add_executable(polynomial polynomial.c)
add_executable(product-info productinfo.c)
add_executable(scanf scanf.c)
add_executable(tprintf tprintf.c)
add_executable(vat vat.c)
add_executable(volume volume_sphere.c)
